# bazel-mono

./: .bazelrc  .gitignore  BUILD  LICENSE  README.md  WORKSPACE  buf.yaml  go.mod  go.sum  package-lock.json  package.json  renovate.json  repositories.bzl  symlinks.sh
.circleci/: ci.sh  config.yml
bazel/go/: copy_into_workspace.sh  proto.bzl
bazel/go/gazelle/go_link/: BUILD.bazel
cmd/go-client/: BUILD.bazel  main.go
cmd/go-server/: BUILD.bazel  main.go
cmd/go-server/users/: BUILD.bazel  helpers.go  types.go  users.go  users_test.go
cmd/go-server/users/migrations/: BUILD.bazel
proto/: BUILD
proto/myorg/blogs/v1/: BUILD  blogs.proto
proto/myorg/users/v1/: BUILD.bazel  doc.go  users.pb.go  users.proto
service/go-client/: BUILD.bazel  Dockerfile  Makefile  main.go
service/go-server/: BUILD.bazel  Makefile  main.go
service/go-server/users/: BUILD.bazel  helpers.go  mocks_test.go  types.go  users.go  users_test.go
service/go-server/users/migrations/: BUILD.bazel  doc.go  migrations.go
service/node-client/: index.ts
service/python-client/: users.py
service/web-client/: BUILD  Dockerfile  Makefile  doc.go  index.js
