load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:map_kind go_binary go_image @io_bazel_rules_docker//go:image.bzl

go_library(
    name = "go-client",
    srcs = ["main.go"],
    importpath = "github.com/johanbrandhorst/bazel-mono/cmd/go-client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/myorg/users/v1:users",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_image(
    name = "go-client-image",
    embed = [":go-client"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_push(
    name = "publish",
    format = "Docker",
    image = "go-client-image",
    registry = "docker.pkg.github.com",
    repository = "johanbrandhorst/bazel-mono/go-client",
    tag = "{STABLE_GIT_SHA}",
)
