load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:map_kind go_binary go_image @io_bazel_rules_docker//go:image.bzl

go_library(
    name = "go-server",
    srcs = ["main.go"],
    importpath = "github.com/johanbrandhorst/bazel-mono/cmd/go-server",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/go-server/users",
        "//proto/myorg/users/v1:users",
        "@com_github_fullstorydev_grpcui//standalone",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_soheilhy_cmux//:cmux",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_image(
    name = "go-server-image",
    embed = [":go-server"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_push(
    name = "publish",
    format = "Docker",
    image = "go-server-image",
    registry = "docker.pkg.github.com",
    repository = "johanbrandhorst/bazel-mono/go-server",
    tag = "{STABLE_GIT_SHA}",
)
