load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:map_kind go_binary go_image @io_bazel_rules_docker//go:image.bzl

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/johanbrandhorst/bazel-mono/service/go-client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/myorg/users/v1:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_image(
    name = "go-client",
    embed = [":go_default_library"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

container_push(
    name = "publish",
    format = "Docker",
    image = "go-client",
    registry = "docker.pkg.github.com",
    repository = "johanbrandhorst/bazel-mono/go-client",
    tag = "{STABLE_GIT_SHA}",
)
