load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "users",
    srcs = [
        "helpers.go",
        "types.go",
        "users.go",
    ],
    importpath = "github.com/johanbrandhorst/bazel-mono/cmd/go-server/users",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/go-server/users/migrations",
        "//proto/myorg/users/v1:users",
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/postgres",
        "@com_github_golang_migrate_migrate_v4//source/go_bindata",
        "@com_github_jackc_pgconn//:pgconn",
        "@com_github_jackc_pgtype//:pgtype",
        "@com_github_jackc_pgx_v4//:pgx",
        "@com_github_jackc_pgx_v4//log/logrusadapter",
        "@com_github_jackc_pgx_v4//stdlib",
        "@com_github_masterminds_squirrel//:squirrel",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "users_test",
    srcs = ["users_test.go"],
    deps = [
        ":users",
        "//proto/myorg/users/v1:users",
        "@com_github_google_go_cmp//cmp",
        "@com_github_ory_dockertest_v3//:dockertest",
        "@com_github_ory_dockertest_v3//docker",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata:go_default_library",  # keep
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
